# Fast-Api-Kitchen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env.docker.sample  .env.local.sample  env.docker.sample  main.py
src/alembic/versions/: 2025_12_02_1359-da774b475df6_users_table.py
src/api/api_v1/: __init__.py  auth.py  auth_dependencies.py
src/core/: config.py
src/core/models/: user.py
src/core/schemas/: users.py
src/crud/: users.py
src/services/: auth.py  jwt.py
